--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Georgia, 'Courier New', Courier, monospace;
 }
 
 body{
@@ -13,36 +13,27 @@ body{
     align-items: center;
 }
 
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.9);
+main{
+    padding: 2rem;
+    border-radius: 2rem;
 }
 
-.container > div{
-    margin: 20px;
-    padding: 10px;
-    border-radius: 10px;
+section{
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.9);
+    background-color: #ec0ac8;
     display: flex;
     flex-direction: column;
-    background-color: rgb(255, 0, 255);
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.9);
+    align-items: center;
+    font-size: xx-large;
+    font-weight: bold;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
-#hh, #mm, #ss {
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
-}
-
-.descricao{
-    font-size: 30px;
-    font-weight: bold;
-    font-style: italic;
+section:not(:last-child){
+    margin-bottom: 1.5rem;
 }
 
 .pontos{
-    font-size: 70px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: none;
 }
