--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
+    user-select: none;
     margin: 0px;
     padding: 0px;
-    font-family: Georgia, 'Courier New', Courier, monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body{
@@ -11,11 +12,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-main{
-    padding: 2rem;
-    border-radius: 2rem;
 }
 
 section{
@@ -36,4 +32,29 @@ section:not(:last-child){
 
 .pontos{
     display: none;
+}
+
+@media (min-width: 800px) {
+    main{
+        display: flex;
+        align-items: center;
+        padding: 2.5rem;
+        border-radius: 2rem;
+        background-color: rgba(255, 255, 255, 0.25);
+    }
+
+    section:not(:last-child){
+        margin: 0;
+    }
+
+    .pontos{
+        display: block;
+        font-size: xx-large;
+        font-weight: bold;
+        box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.9);
+        background-color: #ec0ac8;
+        padding: .5rem;
+        border-radius: .5rem;
+        margin: 0 1.5rem;
+    }
 }
