--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body{
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     background: linear-gradient(100deg, #FF00CB, #8a3ab9);
     display: flex;
     justify-content: center;
@@ -51,8 +51,6 @@ section:not(:last-child){
         display: block;
         font-size: xx-large;
         font-weight: bold;
-        box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.9);
-        background-color: #ec0ac8;
         padding: .5rem;
         border-radius: .5rem;
         margin: 0 1.5rem;
